# homebrew-celestsp

./: README.md  bodies.txt  celestsp.rb  noxfile.py  pyproject.toml  requirements.txt  sphere_tsp.py  test.py
sources/: m_0322_1830.txt  m_0323_0300.txt  m_0323_0500.txt
src/celestsp/: main.py
