[project]
name = "celestsp"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.2.5"
license = {file = "LICENSE"}
description = "Celestial TSP is a Python script that calculates the optimal order of celestial bodies for observation based on their coordinates."
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "astropy>=6.1.7",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scipy>=1.15.2",
]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-celestsp"
Issues = "https://github.com/rioriost/homebrew-celestsp/issues"

[project.scripts]
celestsp = "celestsp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celestsp"]

[tool.hatch.build.targets.sdist]
include = [
  "src/celestsp/*.py",
  "*.py",
  "images/*",
  "sources/*",
]
exclude = [
  "celestsp.rb",
  "uv.lock",
  "dist/.DS_Store",
]
