[project]
name = "celestsp"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.2.31"
license = {file = "LICENSE"}
description = "Celestial TSP is a Python script that calculates the optimal order of celestial bodies for observation based on their coordinates."
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-celestsp"
Issues = "https://github.com/rioriost/homebrew-celestsp/issues"

[project.scripts]
celestsp = "celestsp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celestsp"]

[tool.hatch.build.targets.sdist]
include = [
  "src/celestsp/*.py",
  "*.py",
  "images/*",
  "sources/*",
]
exclude = [
  "celestsp.rb",
  "uv.lock",
  "dist/.DS_Store",
]
